Continue refactoring for ContextMenuControl. Fix charset encoding issues.